2002-12-15  bruno  <bruno.coudoin@free.fr>

	* acconfig.h: Major changes all around to support GNOME2
	* autogen.sh:
	* boards/babymatch/board1_0.xml.in:
	* boards/babymatch/board2_0.xml.in:
	* boards/babymatch/board3_0.xml.in:
	* boards/babymatch/board4_0.xml.in:
	* boards/babymatch/board5_0.xml.in:
	* boards/babymatch/board6_0.xml.in:
	* boards/babyshapes/board1_0.xml.in:
	* boards/babyshapes/board2_0.xml.in:
	* boards/babyshapes/board3_0.xml.in:
	* boards/babyshapes/board4_0.xml.in:
	* boards/babyshapes/board5_0.xml.in:
	* boards/babyshapes/board6_0.xml.in:
	* boards/babyshapes/board7_0.xml.in:
	* boards/doubleentry/board1_0.xml.in:
	* boards/doubleentry/board2_0.xml.in:
	* boards/doubleentry/board3_0.xml.in:
	* boards/geography/board1_0.xml.in:
	* boards/geography/board2_0.xml.in:
	* boards/imagename/board1_0.xml.in:
	* boards/imagename/board2_0.xml.in:
	* boards/imagename/board3_0.xml.in:
	* boards/imagename/board4_0.xml.in:
	* boards/imagename/board5_0.xml.in:
	* boards/imagename/board6_0.xml.in:
	* boards/paintings/board1_0.xml.in:
	* boards/paintings/board2_0.xml.in:
	* boards/paintings/board3_0.xml.in:
	* boards/paintings/board3_1.xml.in:
	* boards/paintings/board4_0.xml.in:
	* boards/paintings/board5_0.xml.in:
	* boards/paintings/board6_0.xml.in:
	* boards/wordsgame/README:
	* boards/wordsgame/wordslevel2.fr:
	* boards/wordsgame/wordslevelmax.fr:
	* configure.in:
	* src/Makefile.am:
	* src/boards/Makefile.am:
	* src/boards/advanced_colors.c: (pause_board), (start_board),
	(end_board), (set_level), (is_our_board), (colors_next_level),
	(colors_destroy_all_items), (colors_create_item), (game_won),
	(process_ok), (item_event), (update_clock), (highlight_selected),
	(init_xml), (add_xml_data), (parse_doc):
	* src/boards/algebra_guesscount.c:
	(algebra_guesscount_create_item):
	* src/boards/chess.c: (display_white_turn), (display_info):
	* src/boards/chess_position.c: (position_get_type), (class_init):
	* src/boards/clockgame.c: (clockgame_create_item):